--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
-# Compiled class file
 *.class
 
-# Log file
-*.log
+.project
+.classpath
+.settings/*
+.idea/*
+logger/galileo-logger/.idea/*
+*.iml
+*.iws
 
-# BlueJ files
-*.ctxt
+.DS_Store
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -13,11 +16,20 @@
 # Package Files #
 *.jar
 *.war
-*.nar
 *.ear
 *.zip
-*.tar.gz
-*.rar
+*.rpm
+*.deb
+*.tgz
+*.gz
+*.log
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+target
+/target/
+**/target/
+/build/
+/~/
+/logs/
+logger/galileo-logger/dependency-reduced-pom.xml
